2007-04-13  Yen-Ju Chen <yjchenx gmail>

	* NSMenu+Hackery.m: Make sure the origin is correct.
	Origin of GNUstep is on the bottom-left. 

2007-04-12  Quentin Mathe <qmathe@club-internet.fr>

	* NSMenuView+Hackery.m 
	(-setGeometry:): Modified to be always mapped on menu bar location thanks 
	to -_menuServerWindowFrame.
	(-_menuServerWindowFrame): Added.

2007-04-07  Quentin Mathe <qmathe@club-internet.fr>

	Fix for bug #8571 #8568 (may help for bug #8608 too)
	Menus should now be really usable if we put apart this modification 
	totally breaks tear-off menu support (was already quite broken as reported
	by #8565 for example).
	* NSMenuView+Hackery.m (-trackWithEvent:): Added method to override GNUstep
	implementation. All code taken from GNUstep NSMenuView.m. Improved 
	indenting.

2007-04-05  Quentin Mathe <qmathe@club-internet.fr>

	Fix for bug #8611 (see Camaelon too).
	* NSMenuItemCell+Hackery.m (-drawInteriorWithFrame:inView:): Turned off 
	this method in order Camaelon equivalent method handles the drawing and
	more importantly loads arrow images used to indicate submenus.

2007-03-29  Quentin Mathe <qmathe@club-internet.fr>

	Last part of the fix to get rid of bordered drawing in menu item cells. 
	Preliminary fix done in Camaelon.
	* GSHorizontalMenuItemCell.m:
	(-drawInteriorWithFrame:inView:): Moved border drawing in method
	_drawBorderAndBackgroundWithFrame:inView: to match latest Camaelon and 
	GNUstep svn changes.
	(_drawBorderAndBackgroundWithFrame:inView:): New method overriding both
	its GNUstep and Camaelon counterparts.
	* NSMenuItemCell+Hackery.m:
	* NHMenuItemCell.m:
	Added some logging statements to aid debugging.

2007-02-18  Yen-Ju Chen <yjchenx at gmail>

	* Make README in reStructured format.

2007-02-11  Quentin Mathe <qmathe@club-internet.fr>

	* EtoileSeparatorMenuItem.m (-init, -isSeparatorItem): New methods which 
	allow to be identified as menu separator item.

2007-02-06  Quentin Mathe <qmathe@club-internet.fr>
